<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="todo">TODO</string>
    <string name="habits">Habits</string>
    <string name="planned">Planned</string>
    <string name="important">Important</string>
    <string name="list_your_ideas">List your Ideas</string>
    <string name="what_todo">What would you like to do?</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="repeat">Repeat</string>
    <string name="create_a_todo_list_app">Create a ToDo list App</string>
    <string name="name_this_group">Name this group</string>
    <string name="completed">Completed</string>
    <string name="description">An Android app that can create to-do and notifies the user when needed, Supports gnome applications as well</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_your_schedule_with_open_todo">Manage Your Tasks With Todo List</string>
    <string name="sign_in_to_sync_your_data_across_all_devices">Sign In to Sync Your Data across all devices</string>
    <string name="sign_in_with_email_id">Sign In With Email ID</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="create_new_group">Create New Group</string>

    <string name="CHANNEL_ONE">CHANNEL_ID_ONE</string>
    <string name="remind_me">Remind me</string>
    <string name="send_due_date">Set due date</string>
    <string name="desc">Description</string>
    <string name="save">Save</string>
    <string name="all_tasks">All Tasks</string>
    <string name="last_updated">Last Updated: 12:01:21 12/12/12 IST</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="sync_all_todos">Sync All Todos</string>
    <string name="search_todo">Search Todo</string>
    <string name="subtasks">subtasks</string>
    <string name="remove_image">Remove Image</string>
    <string name="skip_sign_in">Skip Sign In</string>
    <string name="change_theme">Change Theme</string>
    <string name="skip">Skip</string>
    <string name="not_logged_in">Not Logged in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="know_more_contribute">Know More | Contribute</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="new_password">New Password</string>
    <string name="sign_in">Sign In</string>
</resources>