<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/rounded_top_corners"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/cardBackgroundColor"
    android:fitsSystemWindows="true"
    android:paddingBottom="10dp"
    tools:context=".fragments.AddFragment">

    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/repeat_icon" />

    <EditText
        android:id="@+id/todo_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="50dp"
        android:background="@null"
        android:hint="@string/what_todo"
        android:inputType="text"
        android:keyboardNavigationCluster="true"
        android:maxLines="1"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textAppearance="@style/column_text"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/set_alarm_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center_vertical"
        android:text="@string/set_reminder"
        android:textColor="?attr/colorOnSecondary"
        app:drawableLeftCompat="@drawable/ic_calendar"
        app:drawableTint="?attr/colorOnSecondary"
        app:layout_constraintBottom_toTopOf="@id/todo_input"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/repeat_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center_vertical"
        android:text="@string/repeat"
        android:textColor="?attr/colorOnSecondary"
        app:drawableLeftCompat="@drawable/ic_sync"
        app:drawableTint="?attr/colorOnSecondary"
        app:layout_constraintBottom_toTopOf="@id/todo_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/star_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center_vertical"
        android:inputType="text"
        android:text="@string/important"
        android:textColor="?attr/colorOnSecondary"
        app:drawableLeftCompat="@drawable/ic_star"
        app:drawableTint="?attr/colorOnSecondary"
        app:layout_constraintBottom_toTopOf="@id/todo_input"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/add_to_db_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:rotation="40"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_send_svgrepo_com"
        app:layout_constraintTop_toTopOf="@id/todo_input"
        app:layout_constraintBottom_toBottomOf="@id/todo_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="?attr/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>