<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".fragments.DetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/material_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="?attr/colorPrimaryVariant">

            <ImageView
                android:id="@+id/navigate_back"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_arrow_left"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_tasks"
                android:textSize="17sp"
                android:fontFamily="@font/sf_pro_display"
                android:textColor="?attr/colorOnPrimary"/>
<!--            <TextView-->
<!--                android:id="@+id/update_tick_text"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/save"-->
<!--                android:padding="10dp"-->
<!--                android:textColor="?attr/colorPrimary"-->
<!--                android:layout_gravity="end"-->
<!--                android:fontFamily="@font/sf_pro_display"-->
<!--                android:layout_marginEnd="5dp"/>-->

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/datetime_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_updated"
        android:textSize="10sp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/material_topbar"
        android:layout_marginRight="20dp"
        tools:ignore="SmallSp" />
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:minWidth="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailed_item_title"
        app:layout_constraintBottom_toBottomOf="@id/detailed_item_title"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:button="@drawable/custom_checkbox" />
    <EditText
        android:id="@+id/detailed_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_todo_list_app"
        android:textAppearance="@style/expanded_text"
        android:background="@null"
        android:textSize="25sp"
        android:maxWidth="300dp"
        android:maxLines="3"
        android:hint="Title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/checkbox"
        app:layout_constraintTop_toBottomOf="@id/datetime_details"
        android:layout_marginLeft="20dp"
        android:textCursorDrawable="@color/deep_blue"
        android:inputType="textMultiLine"/>
    <ImageView
        android:id="@+id/important_sign"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:src="@drawable/ic_exclamation_mark"
        app:tint="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailed_item_title"
        app:layout_constraintBottom_toBottomOf="@id/detailed_item_title"
        android:layout_margin="10dp" />
    <EditText
        android:id="@+id/detailed_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textSize="17sp"
        android:hint="@string/desc"
        android:fontFamily="@font/sf_pro_display"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_item_title"
        android:padding="20dp"
        android:maxLines="5"
        android:textCursorDrawable="@color/deep_blue"
        android:inputType="textMultiLine" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/detailed_description"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?attr/cardBackgroundColor"/>

    <TextView
        android:id="@+id/set_alarm_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_due_date"
        android:layout_gravity="center_vertical"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_alarm_modern"
        app:drawableTint="?attr/colorOnPrimary"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp"
        android:fontFamily="@font/sf_pro_text" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/set_alarm_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?attr/cardBackgroundColor"/>
    <TextView
        android:id="@+id/set_due_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder"
        android:textColor="?attr/colorOnPrimary"
        android:layout_gravity="center_vertical"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_calender_figma"
        app:drawableTint="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp"
        android:fontFamily="@font/sf_pro_text"/>
    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/set_due_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?attr/cardBackgroundColor"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/image_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="visible"
        app:cardCornerRadius="10dp"
        android:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3">

        <ImageView
            android:id="@+id/image_1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/image_background"/>
        <ImageButton
            android:id="@+id/remove_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_round_add_circle_outline_24"
            android:background="@null"
            android:layout_gravity="top|end"
            android:layout_margin="10dp"
            android:rotation="45"
            app:tint="?attr/colorOnSecondary" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/colorPrimaryVariant"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/camera_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_camera_round"
                app:tint="?attr/colorSecondaryVariant"
                app:layout_constraintStart_toEndOf="@id/gallery_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"/>
            <ImageView
                android:id="@+id/gallery_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_gallery"
                app:tint="?attr/colorSecondaryVariant"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/con"/>

            <ImageView
                android:id="@+id/con"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|start"
                android:layout_margin="20dp"
                android:src="@drawable/ic_list"
                app:tint="?attr/colorSecondaryVariant"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/update_tick_button"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"
                android:layout_marginEnd="15dp"
                app:lottie_rawRes="@raw/send_lottie"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="15dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>