<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FrontPage"
    android:background="?attr/colorPrimaryVariant">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimaryVariant">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_user"
                app:tint="?attr/colorOnPrimary"
                android:layout_margin="10dp" />
            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello, User"
                android:fontFamily="@font/segoe_bold"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp"
                android:layout_gravity="start"/>

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_magnifier"
                android:layout_marginEnd="16dp"
                app:tint="?attr/colorOnPrimary"
                android:layout_marginRight="16dp" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/myday_card"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardBackgroundColor="?attr/colorPrimaryVariant"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/top_toolbar"
        app:cardElevation="0dp">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_sun"
            app:tint="@color/deep_blue"
            android:layout_gravity="start|center_vertical" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All Tasks"
            android:fontFamily="@font/sf_pro_text"
            android:textSize="15sp"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginStart="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="30dp" />
        <TextView
            android:id="@+id/myday_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/sf_pro_text"
            android:textSize="12sp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="5dp" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/importants_card"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardBackgroundColor="?attr/colorPrimaryVariant"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/myday_card"
        app:cardElevation="0dp">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_star"
            app:tint="@color/peach"
            android:layout_gravity="start|center_vertical" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important"
            android:fontFamily="@font/sf_pro_text"
            android:textSize="15sp"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginStart="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="30dp" />
        <TextView
            android:id="@+id/count_important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:fontFamily="@font/sf_pro_text"
            android:textSize="12sp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical|end" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/planned_card"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardBackgroundColor="?attr/colorPrimaryVariant"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/importants_card">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_baloon"
            app:tint="@color/green"
            android:layout_gravity="start|center_vertical" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planned"
            android:fontFamily="@font/sf_pro_text"
            android:textSize="15sp"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginStart="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="30dp" />
        <TextView
            android:id="@+id/count_planned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tomorrow 1:00"
            android:fontFamily="@font/sf_pro_text"
            android:textSize="12sp"
            android:layout_gravity="center_vertical|end" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/habit_card"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardBackgroundColor="?attr/colorPrimaryVariant"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/planned_card">
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_code_alt"
            app:tint="@color/ui_purple"
            android:layout_gravity="start|center_vertical" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habits"
            android:fontFamily="@font/sf_pro_text"
            android:textSize="15sp"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginStart="35dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginLeft="30dp" />
        <TextView
            android:id="@+id/count_habits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:fontFamily="@font/sf_pro_text"
            android:textSize="12sp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical|end" />
    </androidx.cardview.widget.CardView>
    <View
        android:id="@+id/line_separator"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        app:layout_constraintTop_toBottomOf="@id/habit_card"
        android:background="?attr/cardBackgroundColor"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"/>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/groups_recyclerview"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/line_separator" />-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/colorPrimaryVariant"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="26dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_invention"
            app:tint="?attr/colorSecondaryVariant" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:fontFamily="@font/sf_pro_text"
            android:text="@string/list_your_ideas"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_plus"
            app:tint="?attr/colorSecondaryVariant" />


    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>